tests/type/errors/bad_scope1.xi
foo() {
    x:int = 1
    {
        y:int = 2
    }
    x = y
}